fix: Fix canvas size (due to track overflow)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,7 +31,7 @@ main {
   @include e('container') {
     display: block;
     width: 800px;
-    height: 800px;
+    height: 840px;
     margin: 0 auto 1rem auto;
     position: relative;
   }
